<resources>
    <string name="app_name">Youva</string>

    <string name="client_id">727460680079-6tvdvkfbqotv1n8hr8ugb3e5t6hfou88.apps.googleusercontent.com</string>

    <string name="sign_out">Sign Out</string>

    <string name="str_googleSignIn">Google Sign-In</string>
    <string name="str_quickStart">Quickstart</string>
    <string name="str_signedOut">Signed out</string>
    <string name="str_signIn">Sign in</string>

    <string name="str_selectMode">Hi there! Please choose the mode</string>
    <string name="str_businessOwner">Business Owner</string>
    <string name="str_individual">Individual</string>

    <string name="str_personalDetails">Personal Details</string>
    <string name="str_businessDetails">Business Details</string>
    <string name="str_selectInterest">Add Interests</string>

    <string name="str_firstName">First Name</string>
    <string name="str_lastName">Last Name</string>
    <string name="str_displayName">Display Name</string>
    <string name="str_phoneNumber">Phone Number</string>
    <string name="str_individualAddress">Address</string>
    <string name="str_individualLocation">Add Location</string>

    <string name="str_male">Male</string>
    <string name="str_female">Female</string>

    <string name="str_interests">Interests</string>
    <string name="str_interest1">Interest 1</string>
    <string name="str_interest2">Interest 2</string>
    <string name="str_interest3">Interest 3</string>
    <string name="str_interest4">Interest 4</string>

    <string name="str_businessName">Name</string>
    <string name="str_businessAddress">Address</string>
    <string name="str_businessLocation">Location</string>

    <string name="str_submit">Submit</string>
    <string name="title_activity_maps">Map</string>

    <string name="str_error_toast_msg">Please Enter Required Details</string>
    <string name="str_error_fname">Please Enter FirstName</string>
    <string name="str_error_lname">Please Enter LastName</string>
    <string name="str_error_phone">Please Enter PhoneNumber</string>
    <string name="str_error_gender">Please Select Gender</string>
    <string name="str_error_address">Please Enter Address</string>
    <string name="str_error_location">Please Add Location</string>

    <string name="str_error_interest">Please Select Interests</string>
    <string name="str_error_bName">Please Enter Business Name</string>
    <string name="userprofile_successfully_created">UserProfile Successfully created.</string>
</resources>
