<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBGDetails"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorHintText">

        <EditText
            android:id="@+id/editText_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_firstName"
            android:singleLine="true"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/colorHintText">

        <EditText
            android:id="@+id/editText_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_lastName"
            android:singleLine="true"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/colorHintText">

        <EditText
            android:id="@+id/editText_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_phoneNumber"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/str_male"
            android:textColor="@android:color/white"/>

        <RadioButton
            android:id="@+id/btn_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:text="@string/str_female"
            android:textColor="@android:color/white"/>
    </RadioGroup>

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_individualAddress"
        android:textSize="16dp"
        android:textColor="@color/colorHintText"
        android:layout_marginTop="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="top|left"
        android:lines="3"
        android:padding="5dp"
        android:maxLength="100"
        android:background="@color/colorHintText"/>

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_individualLocation"
        android:textSize="16dp"
        android:textColor="@color/colorHintText"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="start">
        <TextView
            android:id="@+id/txt_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Longitude : "
            android:textSize="16dp"
            android:layout_weight="2"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Latitude : "
            android:textSize="16dp"
            android:layout_weight="2"
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:src="@drawable/ic_add_location"/>
    </LinearLayout>

</LinearLayout>